<resources>
    <string name="app_name">Stack Time</string>
    <string name="title_stack">Schedule</string>
    <string name="title_task">Task</string>
    <string name="title_group">Group</string>
    <string name="title_time">Time</string>

    <string name="dialog_close">Close</string>

    <!-- スタック画面 -->
    <string name="label_now"> now </string>
    <string name="label_finish">done</string>
    <string name="dialog_notify_set">Set Notification</string>
    <string name="dialog_notify_all_on">All ON</string>
    <string name="dialog_notify_all_off">All OFF</string>
    <string name="dialog_final_time">Last time</string>
    <string name="dialog_title_set_notification">Set new notifications</string>
    <string name="dialog_title_ref_notification">Setting notification</string>

    <!-- Toast -->
    <!-- 現在時刻以降を設定してください -->
    <string name="toast_input_time_previous">Please set after the current time.</string>
    <!-- 「やること」を積んでください -->
    <string name="toast_no_stack_task">No tasks are loaded.</string>
    <!-- 時間を設定してください -->
    <string name="toast_no_set_time">Please set the time.</string>
    <!-- 本日以降を設定してください -->
    <string name="toast_not_set_after_now">Please set the time after the current time.</string>
    <!-- 積むことができる「やること」は100までです -->
    <string name="toast_over_max_stack_num">The upper limit is 100.</string>
    <!-- 更新しました -->
    <string name="toast_updated">Updated</string>
    <!-- 通知を設定しました -->
    <string name="toast_set_notification">Notification has been set.</string>
    <!-- 設定した通知はありません-->
    <string name="toast_nothing_notification">No notification.</string>
    <!-- エラーが発生しました。再度、ボタンを押してください -->
    <string name="toast_error_occurred">Error occurred. Please press the button again.</string>
    <!-- 通知は設定されていません -->
    <string name="toast_not_setup_notification">Not set up notifications.</string>
    <!-- 登録済みです -->
    <string name="toast_data_registered">It is registered.</string>

    <!-- タスク画面 -->
    <string name="task_name_hint">Please enter the task(limit 32 characters)</string>
    <string name="group_name_hint">Please enter the group name(limit 32 characters)</string>
    <string name="dialog_create_btn">Save</string>

    <string name="limittime_no_input">\-\-:\-\-</string>
    <string name="limitdate_no_input">\-\-/\-\-</string>
    <string name="select_switch_label_task">Task</string>
    <string name="select_switch_label_group">Group</string>

    <!-- タイマ画面 -->
    <string name="heading_remaining_time">Limit</string>
    <string name="heading_next">Next</string>
    <string name="waiting">Waiting…</string>
    <string name="switch_timer">Next timer start</string>
    <string name="next_none">―</string>
    <string name="init_next_timer">00:00:00</string>
    <string name="init_final_timer">00h00m</string>
    <string name="over_timer">\ > 24h</string>
    <string name="contentDescription_iv_openGragh">Open gragh</string>
    <string name="stopped_timer">\-\-:\-\-:\-\-</string>
    <string name="stopped_view_message">Stopped all notifications.</string>
    <string name="stopped_nofitication_message">Notification stopped</string>
    <string name="click_stop_btn">All notifications have been stopped.</string>


    <!-- 共通 -->
    <string name="unit_task_time">min</string>
    <string name="snackbar_delete">Task deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="no_input">Not entered.</string>

    <!-- 通知 -->
    <string name="notify_task_suffix">. It\'s time to start.</string>
    <string name="notify_final_name">All tasks have finished.</string>


    <!-- ガイド-スタック画面 -->
    <!-- この画面では、「やること」を積み上げて時間を管理することができます。 -->
    <string name="guide_stack_1">On this screen, you can manage the time by stacking tasks.</string>
    <!-- 画面の下に表示されている「やること」をタップして、やることを積み上げていきましょう。 -->
    <string name="guide_stack_2_1">Please tap the task displayed at the bottom of the screen. Then the task will be added.</string>
    <!-- ※「やること」がない場合は、右タブの「Task画面」で作成できます。 -->
    <string name="guide_stack_2_2">* If there is no task, you can create it on the \"Task screen\" on the right tab.</string>
    <!-- リミットの日時は、「ーー:ーー」「日付」をタップして設定できます。 -->
    <string name="guide_stack_3">You can set the last time by tapping \"\-\-:\-\-\" and \"Date\".</string>
    <!-- 設定後は、以下のアイコンを押して通知の設定をしましょう。 -->
    <string name="guide_stack_4">After setting, press the icon below to set the notification.</string>
    <!-- 通知の設定をすると時間のカウントが始まります。カウントは、一番右タブの「Time画面」で確認することができます。 -->
    <string name="guide_stack_5">When you set the notification, the time will start counting. You can check the count on the \"Time screen\" on the far right.</string>
    <!-- 「やりたい」ことを積み上げて、時間を管理しましょう！ -->
    <string name="guide_stack_6">Stack up your tasks and manage your time!</string>
    <string name="guide_stack_6_licenses"><u>Licenses</u></string>

    <!-- ガイド-タスク画面 -->
    <!-- この画面では、「やること」を作成することができます。 -->
    <string name="guide_task_1">You can create tasks on this screen.</string>
    <!-- 右下の＋アイコンで「やること」を作成しましょう。 -->
    <string name="guide_task_2">Let\'s create a task with the \"+ icon\" at the bottom right.</string>
    <!-- 作成した「やること」を変更したい場合は、変更したい「やること」をタップしてください。 -->
    <string name="guide_task_3">If you want to change the task you created, please tap it.</string>
    <!-- 不要になった「やること」は、左にスワイプすることで削除することができます。 -->
    <string name="guide_task_4">Tasks you no longer need can be deleted by swiping left.</string>

    <!-- ガイド-グループ画面 -->
    <!-- この画面では、「やること」をグルーピングすることができます。 -->
    <string name="guide_group_1">This screen allows you to group tasks.</string>
    <!-- 右下の＋アイコンで「グループ」を作成しましょう。 -->
    <string name="guide_group_2">Let\'s create a group with the \"+ icon\" at the bottom right.</string>
    <!-- 作成したグループに「やること」を追加するには、「やること」をドラッグ＆ドロップしてください。 -->
    <string name="guide_group_3">To add a task to the group you created, drag and drop the task.</string>
    <!-- 作成した「グループ」を変更したい場合は、変更したい「グループ」をタップしてください。 -->
    <string name="guide_group_4">If you want to change the group you created, please tap it.</string>
    <!-- 不要になった「グループ」は、左にスワイプすることで削除することができます。 -->
    <string name="guide_group_5">Groups you no longer need can be deleted by swiping left.</string>
    <!-- グループ内の「やること」を削除したい場合も、左にスワイプすることで、そのグループから削除することができます。 -->
    <string name="guide_group_6">If you also want to delete a task in a group, swipe left.</string>

    <!-- ガイド-タイマ画面 -->
    <!-- この画面では、積み上げたやることの時間を確認できます。 -->
    <string name="guide_time_1">On this screen, you can see the time of the stacked tasks.</string>
    <!-- 設定中の通知は、右下のアイコンから変更することができます。 -->
    <string name="guide_time_2">You can change the set notification from the icon at the bottom right.</string>
    <!-- やることの順番や削除をしたい場合は、一番左タブの「Schedule画面」からもう一度設定してください。 -->
    <string name="guide_time_3">To delete a task or change the order of tasks, set again from the \"Schedule screen\" on the far left.</string>

    <!-- Admod -->
    <string name="admod_app_id">ca-app-pub-8046295810838892~8236388212</string>

    <!-- リリース時とテスト時で切り替える -->
    <!-- テスト用
    <string name="admod_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    -->
    <!-- リリース用 -->
    <string name="admod_unit_id">ca-app-pub-8046295810838892/4349114093</string>

    <!-- Fab詳細説明 -->
    <string name="fab_content_switch_direction">ベース時間の方向反転</string>
    <string name="fab_content_ref_notification">通知参照</string>
    <string name="fab_content_set_notification">通知設定</string>
    <string name="fab_content_parent">親</string>


</resources>