<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.supportpreparation.ui.stackManager.StackManagerFragment"
        android:label="@string/title_stack"
        tools:layout="@layout/fragment_stack_manager" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.supportpreparation.ui.taskManager.TaskManagerFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task_manager" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.supportpreparation.ui.groupManager.GroupManagerFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group_manager" />

    <fragment
        android:id="@+id/navigation_time"
        android:name="com.example.supportpreparation.ui.time.TimeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_time" />

</navigation>