<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_fragments"
    app:startDestination="@+id/item_navi_stack">

    <fragment
        android:id="@+id/item_navi_stack"
        android:name="com.stacktime.supportpreparation.ui.stackManager.StackManagerFragment"
        android:label="@string/title_stack"
        tools:layout="@layout/fragment_stack_manager" />

    <fragment
        android:id="@+id/item_navi_task"
        android:name="com.stacktime.supportpreparation.ui.taskManager.TaskManagerFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task_manager" />

    <fragment
        android:id="@+id/item_navi_group"
        android:name="com.stacktime.supportpreparation.ui.groupManager.GroupManagerFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group_manager" />

    <fragment
        android:id="@+id/item_navi_time"
        android:name="com.stacktime.supportpreparation.ui.time.TimeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_time_manager" />

</navigation>