<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.stacktime.supportpreparation.ui.time.TimeFragment">

        <View
            android:id="@+id/v_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_plainLastLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/heading_remaining_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_border" />

        <TextView
            android:id="@+id/tv_finalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/init_final_timer"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plainLastLimit" />

        <TextView
            android:id="@+id/tv_plainProgressTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/next_none"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_border" />

        <TextView
            android:id="@+id/tv_progressTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/init_next_timer"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plainProgressTask" />

        <!-- アラーム停止ボタン -->
        <ImageButton
            android:id="@+id/ib_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/baseline_alarm_off_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_progressTime"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_stoppedAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/stopped_view_message"
            android:textSize="20sp"
            android:textColor="@color/tx_stopped_all_notification"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_stop" />

        <TextView
            android:id="@+id/tv_plainNextTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/heading_next"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_nextTask"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_nextTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="72dp"
            android:paddingEnd="20dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/next_none"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_openGragh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription_iv_openGragh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_border"
            app:srcCompat="@drawable/baseline_open_gragh_32" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <include
            layout="@layout/gragh_navigation" />

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>