<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@color/main" />

    <!-- アラーム -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/ll_alarmList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/bt_allOn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_notify_all_on"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/main"/>

        <Button
            android:id="@+id/bt_allOff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_notify_all_off"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/main"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_setAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:text="@string/dialog_notify_set"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@color/main"/>

</LinearLayout>
